# deepagent_langchain

./: .gitignore  DEVELOPMENT_STUDY_GUIDE.md  README.md  analysis_params.json  client_history_2099007770421986000001.csv  create_df.py  education_related_hits.csv  educational_hits_report.txt  educational_services_hits.csv  main_deepseek_test.py  main_e2e_branch_dialog.py  main_observability_examples.py  main_sandbox_code_example.py  main_ui_agent_server.py  model.py  output.csv  pyproject.toml  run.py  target_hit_df.csv
data/: csp_afpc_sss_inc.cards_event.csv  csp_afpc_sss_inc.uko_event.csv  csp_repo_features.history_automarking_big_148078_155487.csv  demo_client_timeline.csv
deep_agent_test/: README.md  __init__.py  agent_logging.py  agent_specs.py  agent_state.py  analytics_deep_agent.py  critic_loop_cap_middleware.py  data_tools_wrapper.py  execute_python_code_tool.py  few_shot_examples_index.py  few_shot_examples_middleware.py  inspect_artifact_tool.py  load_skills_tool.py  plan_approval_middleware.py  prompt_debug_middleware.py  prompts.py  python_sandbox.py  retrieval_subagents.py  run_native_analytics_chat.py  settings.py  skills_context_middleware.py  spark_data_tool.py  test_deep_agent_e2e_runner.py  tool_loop_guard_middleware.py  tool_output_file_middleware.py  trace_logging.py  trace_logging_middleware.py
examples/: branch_from_graph_step_demo.py  chat_run.py  fake_spark_tools.py  generate_antifraud_synthetic_dataset.py  insight_pipeline_usage.py
planner_agent/: chat_runner.py  factory.py  models.py  prompts.py  research_agent.py  skills_store.py  skills_text_matching.py  structured_output.py
sandbox/: __init__.py  executor.py  sandbox.py
tests/: test_critic_loop_cap_middleware.py  test_critic_node.py  test_data_tools_wrapper.py  test_deep_agent_plan_approval.py  test_deep_agent_trace_logging_middleware.py  (+21 more)
(+150 files in other folders)
