[project]
name = "research-agent"
version = "0.1.0"
description = "Planner-first LangGraph research agent backend"
requires-python = ">=3.11"
dependencies = [
  "aiofiles>=24.1.0",
  "langchain-core>=0.3.0",
  "langchain-gigachat>=0.3.0",
  "langchain-openai>=0.3.0",
  "langgraph>=0.2.0",
  "pandas>=2.0.0",
  "pydantic>=2.7.0",
  "pyyaml>=6.0.0",
]

[project.optional-dependencies]
api = [
  "fastapi>=0.115.0",
  "uvicorn>=0.30.0",
]
dev = [
  "pytest>=8.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"examples/*.py" = ["E402"]

[tool.setuptools.packages.find]
include = ["planner_agent*", "sandbox"]
