[project]
name = "deep-agent-test"
version = "0.1.0"
description = "Аналитический DeepAgent с инструментами чтения данных, skills и sandbox."
requires-python = ">=3.11"
dependencies = [
  "deepagents>=0.6.3",
  "langchain>=1.0.0",
  "langchain-core>=1.4.0",
  "langgraph>=1.1.11",
  "pydantic>=2.7.0",
  "typing-extensions>=4.12.0",
]

[project.optional-dependencies]
data = [
  "pyspark>=3.5.0",
  "pandas>=2.0.0",
  "numpy>=1.26.0",
]
models = [
  "langchain-openai>=0.3.0",
  "langchain-gigachat>=0.3.0",
]
analytics = [
  "matplotlib>=3.8.0",
  "plotly>=5.20.0",
  "scipy>=1.11.0",
  "seaborn>=0.13.0",
  "scikit-learn>=1.4.0",
]

[tool.setuptools.packages.find]
include = ["deep_agent_test*"]

[tool.setuptools.package-data]
deep_agent_test = [
  "resources/config/*.json",
  "resources/skills/**/*.md",
]

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F"]
ignore = ["E501"]
